{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 194,
  "lineage": "f0ddd5a2-201e-13f2-fdd7-46bc9a5c4f59",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "task_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03be432c6553814d0",
            "public_dns": "ec2-15-207-170-188.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.170.188",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.task_ig",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MySQL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ca6b22ca88bdbea",
            "arn": "arn:aws:ec2:ap-south-1:130210155743:instance/i-07a5f0b7fc2dd0768",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a5f0b7fc2dd0768",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02cd9a133dffeb108",
            "private_dns": "ip-192-168-2-101.ap-south-1.compute.internal",
            "private_ip": "192.168.2.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-088c990ea2a919864",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bfbba56b15ff0dd",
            "tags": {
              "Name": "MySQL-OS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08a9c9b56e94d05c0"
            ]
          },
          "dependencies": [
            "aws_security_group.MySQL_SG",
            "aws_security_group.WP_SG",
            "aws_subnet.private_subnet",
            "aws_vpc.task_vpc",
            "tls_private_key.task_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WordPress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04ca6b22ca88bdbea",
            "arn": "arn:aws:ec2:ap-south-1:130210155743:instance/i-0e7b223c4e2e647e3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7b223c4e2e647e3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a9528b064098f6cf",
            "private_dns": "ip-192-168-3-241.ap-south-1.compute.internal",
            "private_ip": "192.168.3.241",
            "public_ip": "52.66.163.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06483a268f88a0ecf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036870122d651d62b",
            "tags": {
              "Name": "WordPress-OS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07041d58a53235194"
            ]
          },
          "dependencies": [
            "aws_security_group.WP_SG",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc",
            "tls_private_key.task_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "task_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:internet-gateway/igw-08d0bc598143ea437",
            "id": "igw-08d0bc598143ea437",
            "owner_id": "130210155743",
            "tags": {
              "Name": "task_ig"
            },
            "vpc_id": "vpc-08e9177b342a90c57"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "task_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03be432c6553814d0",
            "id": "nat-0b90ce47a5c860582",
            "network_interface_id": "eni-0fd9e75ac4dda7de9",
            "private_ip": "192.168.3.246",
            "public_ip": "15.207.170.188",
            "subnet_id": "subnet-036870122d651d62b",
            "tags": {
              "Name": "task NAT"
            }
          },
          "dependencies": [
            "aws_eip.task_ip",
            "aws_internet_gateway.task_ig",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-047b98e5a6aa7973e",
            "owner_id": "130210155743",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b90ce47a5c860582",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NAT_RouteTable"
            },
            "vpc_id": "vpc-08e9177b342a90c57"
          },
          "dependencies": [
            "aws_eip.task_ip",
            "aws_internet_gateway.task_ig",
            "aws_nat_gateway.task_nat",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00b297cd0554a54c1",
            "owner_id": "130210155743",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d0bc598143ea437",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "router_task"
            },
            "vpc_id": "vpc-08e9177b342a90c57"
          },
          "dependencies": [
            "aws_internet_gateway.task_ig",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NAT_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08539fb818d708729",
            "route_table_id": "rtb-047b98e5a6aa7973e",
            "subnet_id": "subnet-02bfbba56b15ff0dd"
          },
          "dependencies": [
            "aws_eip.task_ip",
            "aws_internet_gateway.task_ig",
            "aws_nat_gateway.task_nat",
            "aws_route_table.nat_route",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "router-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0106e0e91b4d266b2",
            "route_table_id": "rtb-00b297cd0554a54c1",
            "subnet_id": "subnet-036870122d651d62b"
          },
          "dependencies": [
            "aws_internet_gateway.task_ig",
            "aws_route_table.router",
            "aws_subnet.public_subnet",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MySQL_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:security-group/sg-08a9c9b56e94d05c0",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a9c9b56e94d05c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL redirection",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07041d58a53235194"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_MySQL",
            "name_prefix": null,
            "owner_id": "130210155743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MySQL_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e9177b342a90c57"
          },
          "dependencies": [
            "aws_security_group.WP_SG",
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WP_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:security-group/sg-07041d58a53235194",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07041d58a53235194",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http redirection",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "WordPress_SG",
            "name_prefix": null,
            "owner_id": "130210155743",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WordPress_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e9177b342a90c57"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:subnet/subnet-02bfbba56b15ff0dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-02bfbba56b15ff0dd",
            "map_public_ip_on_launch": false,
            "owner_id": "130210155743",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-08e9177b342a90c57"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:subnet/subnet-036870122d651d62b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-036870122d651d62b",
            "map_public_ip_on_launch": false,
            "owner_id": "130210155743",
            "tags": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-08e9177b342a90c57"
          },
          "dependencies": [
            "aws_vpc.task_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:130210155743:vpc/vpc-08e9177b342a90c57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00fb592f82b556e84",
            "default_route_table_id": "rtb-0bd9816a59345d2eb",
            "default_security_group_id": "sg-04c596fb1a7779882",
            "dhcp_options_id": "dopt-9d7c86f6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08e9177b342a90c57",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bd9816a59345d2eb",
            "owner_id": "130210155743",
            "tags": {
              "Name": "Task-3"
            }
          }
        }
      ]
    }
  ]
}